init search fragment and add app logo

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="search_text">Search</string>
     <string name="categories_text">Categories</string>
     <string name="ingredients_text">Ingredients</string>
+    <string name="search_bar_hint">Search</string>
 </resources>
