--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="no_result_message">No Result Found</string>
     <string name="ingredient_option">Ingredients</string>
     <string name="instruction_option">Instructions</string>
+    <string name="search_button_description">Search cocktail</string>
 </resources>
