--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,8 @@
     <string name="categories_text">Categories</string>
     <string name="ingredients_text">Ingredients</string>
     <string name="search_bar_hint">Search</string>
+    <string name="random_text">Random</string>
+    <string name="random_cocktail_button">Get a random cocktail</string>
     <string name="image_description">image description</string>
     <string name="no_result_message">No Result Found</string>
     <string name="ingredient_option">Ingredients</string>
