--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="favorites_text">Fav</string>
+    <string name="no_favorite_cocktail_yet">No favorite cocktail yet</string>
 </resources>
