--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="categories_text">Categories</string>
     <string name="ingredients_text">Ingredients</string>
     <string name="search_bar_hint">Search</string>
-    <string name="random_text">Random</string>
+    <string name="random_text">Random cocktail</string>
     <string name="random_cocktail_button">Get a random cocktail</string>
     <string name="image_description">image description</string>
     <string name="no_result_message">No Result Found</string>
@@ -18,6 +18,6 @@
     <string name="detail_back_title">Go Back</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="favorites_text">Fav</string>
+    <string name="favorites_text">Favorite cocktails</string>
     <string name="no_favorite_cocktail_yet">No favorite cocktail yet</string>
 </resources>
